# Manufacturing-Intelligence-Platform-MIP-

./: .editorconfig  .gitignore  CONTRIBUTING.md  Makefile  README.md  SECURITY.md
analytics-engine/: CMakeLists.txt
analytics-engine/include/anomaly/: detector.hpp
analytics-engine/include/db/: db_writers.hpp
analytics-engine/include/oee/: oee_calculator.hpp
analytics-engine/include/predictive/: maintenance.hpp
analytics-engine/include/spc/: control_charts.hpp
analytics-engine/src/anomaly/: detector.cpp  scorer.cpp
analytics-engine/src/db/: postgres_writer.cpp  timescale_writer.cpp
analytics-engine/src/oee/: oee_calculator.cpp
analytics-engine/src/predictive/: maintenance.cpp
analytics-engine/src/spc/: control_charts.cpp
api-gateway/rust-core/: Cargo.toml
api-gateway/rust-core/src/: lib.rs  main.rs
api-gateway/rust-core/src/auth/: jwt.rs
api-gateway/rust-core/src/routes/: machines.rs  mod.rs  oee.rs
dashboard/: index.html  package.json
dashboard/src/: index.css
dashboard/src/app/: App.tsx  layout.tsx
dashboard/src/app/pages/: ExecutiveDashboard.tsx  ProductionFloor.tsx
dashboard/src/components/alerts/: AlertCard.tsx
dashboard/src/components/charts/: OeeGauge.tsx  TimeSeriesChart.tsx
dashboard/src/components/floor-map/: FloorCanvas.tsx  MachineNode.tsx
dashboard/src/components/ui/: index.tsx
dashboard/src/hooks/: useRealtimeMetrics.ts
dashboard/src/lib/: formatters.ts
docs/api/: openapi.yaml
docs/architecture/ADR/: 001_tech_stack.md
docs/runbooks/: README.md
docs/user-guides/: README.md
infra/db/postgres/: 001_initial_master_data.sql
infra/db/timescaledb/: 001_initial_timeseries.sql
infra/docker/: docker-compose.dev.yml
infra/helm/: README.md
infra/kubernetes/: namespace.yaml
infra/monitoring/: prometheus.yml
infra/terraform/: README.md
ingestion-service/: Cargo.toml  build.rs
ingestion-service/src/: lib.rs  main.rs
ingestion-service/src/adapters/: mqtt.rs
ingestion-service/src/kafka/: producer.rs
ingestion-service/src/pipeline/: validator.rs
ingestion-service/tests/: integration_test.rs
ml-pipeline/: requirements.txt
ml-pipeline/notebooks/: anomaly_model_training.ipynb
ml-pipeline/scripts/: export_to_onnx.py  train.py
shared/proto/: alert.proto  machine_event.proto  sensor_data.proto
shared/schemas/json-schemas/: sensor_reading.json
